# table_tennis_stats

./: .gitattributes  Home.py  README.md  app.py  main.py  old_app.py  pyproject.toml
01_MainNotebooks/: 01_get_events_by_year.ipynb  02_process_events_data.ipynb  03_get_match_payloads.ipynb  04_filter_singles_payloads.ipynb  05_clean_events_list.ipynb  06_update_sponsors.ipynb  07finalise_events.ipynb  08_get_match_details.ipynb  09_collate_matches.ipynb  10_engineer_match_data.ipynb  11_get_player_details.ipynb  12_compute_winrates.ipynb  13_compute_networks.ipynb  13_table_type_analysis.ipynb  get_match_details.ipynb  get_match_payloads.ipynb  get_match_payloads_2.ipynb
01_Obtain_data/: 01_get_events_by_year.ipynb  02_process_events_data.ipynb  03_get_match_payloads.ipynb  03_get_match_payloads_threaded.ipynb  04_filter_singles_payloads.ipynb  05_clean_events_list.ipynb  06_gets_sponsors_and_finalise_events.ipynb  06_update_sponsors.ipynb  07_get_sponsors_and_final.ipynb  07finalise_events.ipynb  08X_get_match_logs_or_coms.ipynb  08_get_match_details.ipynb  09_collate_matches.ipynb  09_collate_matches_v1.ipynb  09_collate_matches_v2.ipynb  10_engineer_match_data.ipynb  11_get_player_details.ipynb  calc_bestOfZero_problem.csv  finalise_events.ipynb  game_scores_check_df.csv  games_mismatch_df.csv  get_match_details.ipynb  get_match_feed.ipynb  get_match_payloads.ipynb  get_players_from_matches.ipynb  get_sponsors copy.ipynb  players.json  unique_players.txt
02_Analyse_data/: elo_master.ipynb  elo_vs_table.ipynb  final_win_rate.ipynb
02_DataPlayground/: elo_master.ipynb  player_winrates.ipynb
Analyse_data/: players_win_rate.ipynb
components/: intro.py
(+22641 files in other folders)
