[project]
name = "table-tennis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "country-list>=1.1.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "nest-asyncio>=1.6.0",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "plotly>=6.3.1",
    "pycountry>=24.6.1",
    "pydantic>=2.12.3",
    "python-levenshtein>=0.27.3",
    "requests>=2.32.5",
    "thefuzz>=0.22.1",
]
